2007-11-30  Sebastien Pouliot  <sebastien@ximian.com>

	* TypeIsNotSubsetOfMethodSecurityRule.cs: Refactor to reduce method 
	size.

2007-10-07  Sebastien Pouliot  <sebastien@ximian.com>

	* Gendarme.Rules.Security.mdp: Update project file.

2006-10-15  Sebastien Pouliot  <sebastien@ximian.com>

	* Gendarme.Rules.Security.xml.in: Update Uri for rules (to generate
	more useful reports).	

2006-09-28  Sebastien Pouliot  <sebastien@ximian.com>

	* Makefile.am: Adjust EXTRA_DIST to include project files in tarballs.

2006-09-28  Christian Birkl  <christian.birkl@gmail.com>

	* Gendarme.Rules.Security.csproj: Included ChangeLog
	* SealedTypeWithInheritanceDemandRule.cs, 
	SecureGetObjectDataOverridesRule.cs, TypeExposeFieldsRule.cs, 
	TypeIsNotSubsetOfMethodSecurityRule.cs, TypeLinkDemandRule.cs, 
	MethodCallWithSubsetLinkDemandRule.cs, 
	NonVirtualMethodWithInheritanceDemandRule.cs: Migrated untyped IList
	messages collection to typed MessageCollection class.
	
2006-09-20  Sebastien Pouliot  <sebastien@ximian.com>

	* SecureGetObjectDataOverridesRule.cs: Update FIXME.

2006-07-31  Sebastien Pouliot  <sebastien@ximian.com>

	* Gendarme.Rules.Security.mdp: New. Project file for MonoDevelop.

2006-06-13  Sebastien Pouliot  <sebastien@ximian.com>

	* Makefile.am: Use -pkg:mono-nunit to reference nunit assemblies.
	Added self-test target to promote compliance ;-)

2006-03-01  Sebastien Pouliot  <sebastien@ximian.com>

	* Makefile.am: Fix deps on run-test